--- a/ContactMe.html
+++ b/ContactMe.html
@@ -10,7 +10,7 @@
     <p>Email : shindeyogeshs333@gmail.com</p>
 
     <hr>
-    <form class="" action="MyWebsite.html" method="post">
+    <form class="" action="index.html" method="post">
 
       <label>Your Name:</label>
       <input type="text">
